
cstl 0.4.6 : 2009-01-14 11:10:25
* Fixup bugs in _iterator_belong_to_vector. <Wangbo>
* Fixup bugs in _hash_function. <Wangbo>
* Fixup bugs in _hashtable_iterator_next. <Wangbo>

cstl 0.4.7 : 2009-01-16 17:09:16
* Add hash function for c build-in types. <Wangbo>
* Fixup bugs in _unify_types. <Wangbo>
* Fixup bugs in _hashtable_erase_pos. <Wangbo>

cstl 0.5.0 : 2009-01-19 15:38:25
* Update the copy constructor and assignment operator interface of all containers. <Wangbo>

cstl 0.5.1 : 2009-02-03 14:12:02
* Fixup bugs in basic_string_c_str() and basic_string_data(). <Wangbo>
* Fixup bugs in basic_string_init_cstr() and basic_string_init_elem(). <Wangbo>
* Fixup bugs in vector_init_copy_range(). <Wangbo>
* Fixup bugs in basic_string_connect_elem(). <Wangbo>
* Fixup bugs in basic_string find functions. <Wangbo>
* Fixup bugs in vector resize functions. <Wangbo>
* Fixup bugs in _vector_iterator_minus(). <Wangbo>
* Fixup bugs in basic_string insert function(). <Wangbo>

cstl 0.6.0 : 2009-02-05 17:27:10
* Update interface and implemention of all containers. <Wangbo>

cstl 0.6.1 : 2009-02-12 17:02:28
* Fixup bug in _hash_map_at(), infinity recursive. <Wangbo>

cstl 0.7.0 : 2009-02-17 14:51:04
* Update the element list mechanism. <Wangbo>

cstl 0.7.1 : 2009-02-18 09:46:44
* Fixup bugs in slist_push_front. <Wangbo>
* Fixup bugs for memory leak. <Wangbo>
* Update default compare function for all container. <Wangbo>
* Fixup bugs in deque_erase_range(). <Wangbo>

cstl 0.7.2 : 2009-02-19 11:16:55
* Fixup bugs in _avl_tree_iterator_prev() and _rb_tree_iterator_prev(). <Wangbo>

cstl 0.7.3 : 2009-03-05 15:28:28
* Fixup bugs in heap algorithm with operator < and operator >. <Wangbo>

cstl 0.8.0 : 2009-03-09 13:25:49
* Take out all destroy element function and element compare function. <Wangbo>

cstl 1.0.0 : 2009-03-10 11:16:29
* Build release version cstl-1.0.0. <Wangbo>

libcstl 1.0.0 : 2009-04-20 20:33:23
* Change project name frome cstl to libcstl. <Wangbo>